# Connect4

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-lock.txt
artifacts/: elo_ratings.json
scripts/: evaluate_ai_strength.py  run_game_tkint.py
src/connect4/ai/: __init__.py  ai_base.py  minimax_ai.py  random_ai.py
src/connect4/core/: __init__.py  game_core.py
src/connect4/evaluation/: __init__.py  ladder.py  registry.py
src/connect4/ui/: ai_options.json  ipywidgets_ui.py  player_options.py  session_state.py  tkinter_ui.py
tests/: test_evaluation.py  test_ui_state.py
